--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@editorjs/editorjs": "^2.30.8",
+    "@editorjs/header": "^2.8.8",
+    "@editorjs/list": "^2.0.6",
     "@hookform/resolvers": "^4.1.3",
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -23,6 +26,7 @@
     "@usewaypoint/email-builder": "^0.0.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "editorjs-button": "^3.0.3",
     "lucide-react": "^0.482.0",
     "next": "15.2.2",
     "next-themes": "^0.4.6",
