--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "editorjs-button": "^3.0.3",
+    "editorjs-header-with-alignment": "^1.0.1",
     "lucide-react": "^0.482.0",
     "next": "15.2.2",
     "next-themes": "^0.4.6",
@@ -42,6 +43,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "editorjs-text-color-plugin": "^2.0.4",
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
     "tailwindcss": "^4"
