--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "lucide-react": "^0.482.0",
     "next": "15.2.2",
     "next-themes": "^0.4.6",
-    "novel": "^1.0.2",
+    "novel": "0.1.22",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-email-editor": "^1.7.11",
