--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@editorjs/editorjs": "^2.30.8",
-    "@editorjs/header": "^2.8.8",
-    "@editorjs/list": "^2.0.6",
+    "@blocknote/core": "^0.26.0",
+    "@blocknote/react": "^0.26.0",
+    "@blocknote/shadcn": "^0.26.0",
     "@hookform/resolvers": "^4.1.3",
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -24,30 +24,22 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@usewaypoint/email-builder": "^0.0.8",
     "ai": "^4.1.63",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
-    "editorjs-button": "^3.0.3",
-    "editorjs-header-with-alignment": "^1.0.1",
-    "highlight.js": "^11.11.1",
-    "lowlight": "^3.3.0",
-    "lucide-react": "^0.482.0",
+    "emblor": "^1.3.5",
+    "lucide-react": "^0.483.0",
     "next": "15.2.2",
     "next-themes": "^0.4.6",
-    "novel": "^1.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-email-editor": "^1.7.11",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
-    "tiptap-extension-auto-joiner": "^0.1.3",
-    "tiptap-extension-global-drag-handle": "^0.1.18",
-    "use-debounce": "^10.0.4",
+    "tw-animate-css": "^1.2.4",
     "zod": "^3.24.2"
   },
   "devDependencies": {
