--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "emblor": "^1.3.5",
+    "js-beautify": "^1.15.4",
     "lucide-react": "^0.483.0",
     "next": "15.2.2",
     "next-themes": "^0.4.6",
